[gd_scene load_steps=4 format=3 uid="uid://dwjkq21fei35f"]

[ext_resource type="PackedScene" uid="uid://dbu1lvajypafb" path="res://src/ui_elements/dropdown.tscn" id="1_2jgmw"]
[ext_resource type="Script" path="res://src/ui_elements/setting_dropdown.gd" id="1_rqfwo"]
[ext_resource type="Texture2D" uid="uid://cvh3kwbucf2n1" path="res://visual/icons/Reload.svg" id="2_1iot8"]

[node name="SettingDropdown" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
script = ExtResource("1_rqfwo")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 13

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"DarkPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Dropdown" parent="PanelContainer/HBoxContainer" instance=ExtResource("1_2jgmw")]
layout_mode = 2
size_flags_horizontal = 2

[node name="ResetButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("2_1iot8")

[connection signal="value_changed" from="PanelContainer/HBoxContainer/Dropdown" to="." method="_on_dropdown_value_changed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
